embedded mongoDB and working kafka message sending/receiving

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 
 #mongodb
-spring.data.mongodb.host=localhost
-spring.data.mongodb.port=27017
-spring.data.mongodb.database=AGENDA
+#spring.data.mongodb.host=localhost
+#spring.data.mongodb.port=27017
+#spring.data.mongodb.database=AGENDA
 
 #to print SQLs in console
 spring.jpa.show-sql = true
@@ -11,8 +11,8 @@ spring.jpa.show-sql = true
 
 #logging.file=C:/logs/spring-boot-logging.log
 
-oauth2.clientId=kassad
-oauth2.clientSecret=ananas
+#oauth2.clientId=kassad
+#oauth2.clientSecret=ananas
 
 #logging
 logging.level.org.springframework.data=debug
