--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,6 +2,8 @@ spring:
   application:
     name: user-service
   kafka:
+    key:
+      userUpdated: 1231231231
     consumer:
       auto-offset-reset: earliest
       group-id: 1123122
