--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,12 @@
     </properties>
 
     <dependencies>
+        <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-mail -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+            <version>2.0.2.RELEASE</version>
+        </dependency>
         <!-- https://mvnrepository.com/artifact/org.axonframework/axon-mongo -->
         <dependency>
             <groupId>org.axonframework</groupId>
