--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,12 +1,17 @@
 spring:
   application:
     name: user-service
-  kafka:
-    key:
-      userUpdated: 1231231231
-    consumer:
-      auto-offset-reset: earliest
-      group-id: 1123122
+  mail:
+    host: smtp.gmail.com
+    port: 587
+    username: <username>
+    password: <password>
+    properties:
+      mail:
+        smtp:
+          auth: true
+          starttls:
+            enable: true
 server:
   port: 8092
 eureka:
@@ -15,11 +20,6 @@ eureka:
       defaultZone: ${EUREKA_URI:http://localhost:8761/eureka}
   instance:
     preferIpAddress: true
-kafka:
-    bootstrap-servers: localhost:9092
-    topic:
-      userCreated: USER_CREATED_TOPIC
-      userUpdated: USER_UPDATED_TOPIC
 security:
   basic:
     enabled: false
