--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,9 +9,12 @@ eureka:
       defaultZone: ${EUREKA_URI:http://localhost:8761/eureka}
   instance:
     preferIpAddress: true
+
 security:
-  basic:
-    enabled: false
+  oauth2:
+    client:
+      client-id: kassad
+      client-secret: kassad
 
 mail:
   username:
