--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,6 +10,13 @@ eureka:
   instance:
     preferIpAddress: true
 
+spring:
+  data:
+    mongodb:
+      host: localhost
+      port: 27017
+      database: agenda
+
 security:
   oauth2:
     client:
@@ -17,5 +24,5 @@ security:
       client-secret: kassad
 
 mail:
-  username:
-  password:
+  username: <username>
+  password: <password>
