--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,11 @@
 spring:
   application:
     name: user-service
+  data:
+    mongodb:
+      host: localhost
+      port: 27017
+      database: agenda
 server:
   port: 8092
 eureka:
@@ -10,19 +15,14 @@ eureka:
   instance:
     preferIpAddress: true
 
-spring:
-  data:
-    mongodb:
-      host: localhost
-      port: 27017
-      database: agenda
-
 security:
   oauth2:
     client:
       client-id: kassad
-      client-secret: kassad
+      client-secret: kassad # $2a$08$kU3H5uvRJlZ2UvcaFpi5GOriMuBtp3.VR8luvgYJ6c5F.I5mQpZFS
 
 mail:
+  host: smtp.gmail.com
+  port: 465
   username: <username>
   password: <password>
