--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -1,6 +1,3 @@
-mail:
-  username: <username>
-  password: <password>
 
 eureka:
   client:
@@ -12,3 +9,8 @@ spring:
       host: localhost
       port: 56429
       database: embeded_db
+mail:
+  host: localhost
+  username: username
+  password: secret
+  port: 3025
