--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -20,9 +20,16 @@ security:
     client:
       client-id: kassad
       client-secret: kassad # $2a$08$kU3H5uvRJlZ2UvcaFpi5GOriMuBtp3.VR8luvgYJ6c5F.I5mQpZFS
+      authorized-grant-types: authorization_code,refresh_token,password
 
 mail:
   host: smtp.gmail.com
   port: 465
   username: <username>
   password: <password>
+
+logging:
+  level:
+    org:
+      springframework:
+        security: DEBUG
