--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,6 +10,7 @@ spring:
     dispatch-options-request: true
   servlet:
     multipart:
+      enabled: true
       max-file-size: 128KB
       max-request-size: 128KB
 
