--- a/.travis.yml
+++ b/.travis.yml
@@ -9,11 +9,21 @@ cache:
 
 before_install:
   - chmod +x mvnw
+  - echo -n | openssl s_client -connect https://scan.coverity.com:443 | sed -ne '/-BEGIN CERTIFICATE-/,/-END CERTIFICATE-/p' | sudo tee -a /etc/ssl/certs/ca-
+
 
 addons:
   sonarcloud:
     organization: "kamil-bednarczyk-github"
     token:
       secure: "$SONAR_TOKEN"
+  coverity_scan:
+      project:
+        name: "kamil-bednarczyk/user_service"
+        description: "SquadAgenda app microservice for user data and operations"
+      notification_email: szary03@gmail.com
+      build_command_prepend: ""
+      build_command: ""
+      branch_pattern: coverity_scan
 script:
    - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent install sonar:sonar
