log4j properties added and set log level to info

--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -24,3 +24,11 @@ security:
     client:
       client-id: test
       client-secret: test
+
+log4j:
+  rootCategory: INFO
+  category:
+    org:
+      springframework:
+        beans:
+          factory: INFO
