fix travis.yml mistake

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,9 @@ cache:
 before_install:
   - chmod +x mvnw
 
+services:
+  - docker
+
 addons:
   sonarcloud:
     organization: "kamil-bednarczyk-github"
@@ -21,7 +24,7 @@ script:
    - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent install sonar:sonar
 
 
-after_cuccess:
-  - mvn install -DSkipTests dockerfile:build
+after_success:
+  - mvn dockerfile:build
   - docker login -u "$DOCKER_USERNAME" -p "$DOCKER_PASSWORD"
   - docker push kamilbednarczyk/user_service
