--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,64 @@ services:
     depends_on:
       - mongodb
       - rabbit
+    environment:
+      spring.data.mongodb.host: mongodb
+      eureka.client.serviceUrl.defaultZone: http://eureka:8761/eureka/
+      eureka.instance.preferIpAdress: "true"
+    links:
+      - mongodb
+      - rabbit
+      - eureka
+  events_service:
+    image: kamilbednarczyk/events_service:latest
+    container_name: events_service
+    ports:
+      - 8091:8091
+    depends_on:
+      - mongodb
+      - rabbit
+    environment:
+      eureka.instance.preferIpAdress: "true"
+      spring.data.mongodb.host: mongodb
+      eureka.client.serviceUrl.defaultZone: http://eureka:8761/eureka/
+      security.oauth2.resource.token-info-uri: http://user_service:8092/oauth/check_token
+    links:
+      - rabbit
+      - eureka
+      - mongodb
+      - user_service
+  team_service:
+    image: kamilbednarczyk/team_service:latest
+    container_name: team_service
+    ports:
+      - 8094:8094
+    depends_on:
+      - mongodb
+      - rabbit
+    environment:
+      spring.rabbitmq.host: rabbit
+      eureka.instance.preferIpAdress: "true"
+      spring.data.mongodb.host: mongodb
+      eureka.client.serviceUrl.defaultZone: http://eureka:8761/eureka/
+      security.oauth2.resource.token-info-uri: http://user_service:8092/oauth/check_token
+    links:
+      - rabbit
+      - mongodb
+      - eureka
+      - user_service
+  eureka:
+    container_name: eureka
+    image: kamilbednarczyk/eureka_service:latest
+    ports:
+      - 8761:8761
+    environment:
+      eureka.instance.hostname: eureka
+  frontend:
+    container_name: frontend
+    image: kamilbednarczyk/squad-agenda-frontend
+    ports:
+      - 4200:4200
+# dependency services
   mongodb:
     image: mongo
     environment:
@@ -17,7 +75,7 @@ services:
       - 27017:27017
   rabbit:
     container_name: rabbit
-    image: rabbitmq:3.7.5
+    image: rabbitmq:management
     ports:
       - 15672:15672
       - 5672:5672
