--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,13 +9,17 @@ services:
       - mongodb
       - rabbit
     environment:
+      spring.rabbitmq.host: rabbit
       spring.data.mongodb.host: mongodb
+      security.oauth2.resource.token-info-uri: http://user_service:8092/oauth/check_token
       eureka.client.serviceUrl.defaultZone: http://eureka:8761/eureka/
       eureka.instance.preferIpAdress: "true"
     links:
       - mongodb
       - rabbit
       - eureka
+    networks:
+      - spring-cloud-network
   events_service:
     image: kamilbednarczyk/events_service:latest
     container_name: events_service
@@ -25,6 +29,7 @@ services:
       - mongodb
       - rabbit
     environment:
+      spring.rabbitmq.host: rabbit
       eureka.instance.preferIpAdress: "true"
       spring.data.mongodb.host: mongodb
       eureka.client.serviceUrl.defaultZone: http://eureka:8761/eureka/
@@ -34,6 +39,8 @@ services:
       - eureka
       - mongodb
       - user_service
+    networks:
+      - spring-cloud-network
   team_service:
     image: kamilbednarczyk/team_service:latest
     container_name: team_service
@@ -48,6 +55,8 @@ services:
       spring.data.mongodb.host: mongodb
       eureka.client.serviceUrl.defaultZone: http://eureka:8761/eureka/
       security.oauth2.resource.token-info-uri: http://user_service:8092/oauth/check_token
+    networks:
+      - spring-cloud-network
     links:
       - rabbit
       - mongodb
@@ -60,11 +69,15 @@ services:
       - 8761:8761
     environment:
       eureka.instance.hostname: eureka
+    networks:
+      - spring-cloud-network
   frontend:
     container_name: frontend
     image: kamilbednarczyk/squad-agenda-frontend
     ports:
-      - 4200:4200
+      - 8800:80
+    networks:
+      - spring-cloud-network
 # dependency services
   mongodb:
     image: mongo
@@ -73,11 +86,17 @@ services:
     container_name: mongodb
     ports:
       - 27017:27017
+    networks:
+      - spring-cloud-network
   rabbit:
     container_name: rabbit
     image: rabbitmq:management
     ports:
       - 15672:15672
       - 5672:5672
-
+    networks:
+      - spring-cloud-network
+networks:
+    spring-cloud-network:
+        driver: bridge
 
